Fixed Behavior after 3 hours :(

--- a/_DEMO_DEBUG/imgui.ini
+++ b/_DEMO_DEBUG/imgui.ini
@@ -2823,3 +2823,123 @@ Pos=710,10
 Size=240,520
 Collapsed=0
 
+[WORLD INFO [781 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [686 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [522 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [868 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [641 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [738 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [679 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [773 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [687 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [769 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [728 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [22 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [23 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [701 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [637 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [588 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [6 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [5 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [21 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [0 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [745 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [682 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [875 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [422 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
