--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(Exam_Plugin SHARED
     "stdafx.cpp"
     "SurvivalAgentPlugin.cpp"
     ${GRAPH_SOURCES}
-    ${GOAP_SOURCES} "GOAP/Actions/Actions.h" "GOAP/Actions/Actions.cpp" "GOAP/Actions/BaseAction.h" "GOAP/Actions/BaseAction.cpp" "GOAP/Memory/Memory.h" "GOAP/Memory/Memory.cpp" "GOAP/Planner/Planner.h" "GOAP/Planner/Planner.cpp" "GOAP/Utils/WorldUtils.h" "GOAP/WorldStates/BaseWorldState.h" "GOAP/WorldStates/BaseWorldState.cpp" "GOAP/WorldStates/WorldStates.h" "GOAP/WorldStates/WorldStates.cpp")
+    ${GOAP_SOURCES} "GOAP/Actions/Actions.h" "GOAP/Actions/Actions.cpp" "GOAP/Actions/BaseAction.h" "GOAP/Actions/BaseAction.cpp" "GOAP/Memory/Memory.h" "GOAP/Memory/Memory.cpp" "GOAP/Planner/Planner.h" "GOAP/Planner/Planner.cpp" "GOAP/Utils/WorldUtils.h" "GOAP/WorldStates/BaseWorldState.h" "GOAP/WorldStates/BaseWorldState.cpp" "GOAP/WorldStates/WorldStates.h" "GOAP/WorldStates/WorldStates.cpp" "GOAP/Memory/SeenPurge.h" "GOAP/Memory/SeenPurge.cpp" "GOAP/Memory/VisitedHouse.h"  "GOAP/Memory/VisitedHouse.cpp")
 
 target_link_libraries(Exam_Plugin PUBLIC ${EXAM_LIB_DEBUG})
 target_include_directories(Exam_Plugin PUBLIC ${EXAM_INCLUDE_DIR})
