Huge Code Refactor
I created function is Utils that allows me to redue the amount of duplicate code , when going to and item or consuming it

--- a/_DEMO_DEBUG/imgui.ini
+++ b/_DEMO_DEBUG/imgui.ini
@@ -2998,3 +2998,53 @@ Pos=710,10
 Size=240,520
 Collapsed=0
 
+[WORLD INFO [631 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [556 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [719 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [786 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [640 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [661 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [883 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [594 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [657 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [917 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
