--- a/_DEMO_RELEASE/imgui.ini
+++ b/_DEMO_RELEASE/imgui.ini
@@ -49,8 +49,8 @@ Size=240,431
 Collapsed=0
 
 [WORLD INFO [336 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [321 FPS]]
@@ -1534,8 +1534,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [847 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [798 FPS]]
@@ -2154,8 +2154,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [382 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [373 FPS]]
@@ -2704,8 +2704,8 @@ Size=240,431
 Collapsed=0
 
 [WORLD INFO [931 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [883 FPS]]
@@ -3009,8 +3009,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [902 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [344 FPS]]
@@ -3224,8 +3224,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [905 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [861 FPS]]
@@ -3409,8 +3409,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [932 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [879 FPS]]
@@ -3609,8 +3609,8 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [930 FPS]]
-Pos=651,10
-Size=240,431
+Pos=710,10
+Size=240,520
 Collapsed=0
 
 [WORLD INFO [881 FPS]]
@@ -6829,6 +6829,126 @@ Size=240,520
 Collapsed=0
 
 [WORLD INFO [1239 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [995 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [940 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [900 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [899 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [893 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [874 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [872 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [869 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [867 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [863 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [862 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [857 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [854 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [853 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [848 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [846 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [852 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [887 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [901 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [909 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [921 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [922 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [935 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [939 FPS]]
 Pos=710,10
 Size=240,520
 Collapsed=0
