--- a/_DEMO_DEBUG/imgui.ini
+++ b/_DEMO_DEBUG/imgui.ini
@@ -3123,3 +3123,18 @@ Pos=710,10
 Size=240,520
 Collapsed=0
 
+[WORLD INFO [514 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [648 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [538 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
