Updated Power Poirnt
deleted unused code ,erased debug comments

--- a/_DEMO_DEBUG/imgui.ini
+++ b/_DEMO_DEBUG/imgui.ini
@@ -3138,3 +3138,33 @@ Pos=710,10
 Size=240,520
 Collapsed=0
 
+[WORLD INFO [611 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [680 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [16 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [757 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [515 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
+[WORLD INFO [604 FPS]]
+Pos=710,10
+Size=240,520
+Collapsed=0
+
